<resources>
    <string name="app_name">Application de nettoyage</string>
    <string name="title_app">Application de Nettoyage</string>
    <string name="description_app">
       Nettoyage automatique des fichiers temporaires pour un téléphone plus rapide et optimisé.
    </string>
    <string name="btn_clean">Nettoyer maintenant</string>
    <string name="result_default">Résultat du nettoyage</string>
    <string name="stop_clean">Stop Auto Clean</string>
    <string name="start_clean">Start Auto Clean</string>

</resources>