<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitle"
        android:text="@string/title_app"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtDescription"
        android:text="@string/description_app"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnClean"
        android:text="@string/btn_clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"/>


    <TextView
        android:id="@+id/txtResult"
        android:text="@string/result_default"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnStartAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_clean"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2196F3"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/btnStopAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_clean"
        android:layout_marginTop="8dp"
        android:backgroundTint="#F44336"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/txtAutoStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Auto Clean: OFF"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

</LinearLayout>
